[package]
name = "yatd"
description = "Yet Another Tower Defense"
authors = ["druskus20"]
repository = "https://github.com/druskus20/yatd"
license = "MIT"
version = "0.1.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./"]

[dependencies]
bevy = { version = "0.6", default-features = false}
rand = "0.8.4"
anyhow = "1.0.51"
extend = "1.1.2"
autodefault = "2.0.0"
smooth-bevy-cameras = "0.2.0"
bevy-inspector-egui = "0.8.1"
leafwing-input-manager = "0.2.0"
bevy_mod_picking = "0.5.4"
bevy_tweening = "0.3.2"

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"]}

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }


[lib]
name = "yatd_lib"
path = "src/lib.rs"

[[bin]]
name = "yatd"
path = "src/main.rs"
